--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,10 @@ main {
   margin-left: 5px;
 }
 
+.meme {
+  position: relative;
+}
+
 .meme--form {
   display: grid;
   grid-template: 40px 40px / 2fr 1fr;
@@ -72,4 +76,37 @@ main {
   margin-top: 20px;
   width: 100%;
   height: 100%;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 10px;
 }
